  ptrs; fixed
- Windows XP manifest is now included in wx.rc; it is no longer neccessary
  to ship .exe.manifest file with applications to support XP themes
- wxLocale::Init no longer reports error if trying to set Unicode-only locale
  or if user's default locale is Unicode-only
- Improved border handling so it no longer shows a thin and
  sunken border under XP

wxMotif:

- made wxFileDialog behaviour with complex wildcards more sensible (it still
  does not support all the features other ports do); refer to wxFileDialog
  documentation for a detailed explanation
- implemented wxWakeUpIdle
- for Motif 2.0, used the native combobox widget instead of the GPL'd
  xmcombo; xmcombo is still used for Motif 1.x and Lesstif when compiled
  with Motif 1.x compatibility
- implemented wxToggleButton
- wxRadioBox and wxStaticBox now use the default shadow (border) style
  instead of a sunken border
- implemented wxBitmapDataObject
- finished wxClipboard implementation

wxUniv:

- controls in toolbars now supported

wxHTML:

- added SetFonts to HTML printing classes (Adrian Philip Look)
- it is now possible to force page break when printing by inserting
  <div style="page-break-before:always"> into the markup (Greg Chicares)
- wxHtmlWindow now uses double buffering to prevent flicker


OLD CHANGES
===========

INCOMPATIBLE CHANGES SINCE 2.2.x
================================

    Please take a few minutes to read the following list, especially
    paying attention to the most important changes which are marked
    with '!' in the first column.

    Also please note that you should ensure that WXWIN_COMPATIBILITY_2_2
    is defined to 1 if you wish to retain maximal compatibility with 2.2
    series -- however you are also strongly encouraged to try to compile
    your code without this define as it won't be default any longer in
    2.6 release.

    NB: if you want to build your program with different major versions